fixed client carousel images, fixed our team card alignment, added button for Team page, added team.html and team.css

--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,7 @@ body {
 }
 
 .team .row {
-    /* display: inline-block; */
+    display: inline-block;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -793,6 +793,27 @@ body {
     background: #ccc;
     bottom: -3rem;
     left: -4rem;
+}
+
+#meet-team-btn {
+    outline: none;
+    border: none;
+    border-radius: 5rem;
+    background: white;
+    border-style: groove;
+    border-color: #15253aff;
+    font-size: 1.5rem;
+    cursor: pointer;
+    height: 3.5rem;
+    width: 20rem;
+    box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .3);
+}
+
+#meet-team-btn:hover {
+    letter-spacing: .1rem;
+    opacity: .9;
+    color: white;
+    background: #15253aff;
 }
 
 .contact {
@@ -958,7 +979,7 @@ body {
 }
 
 .footer .footer-top .social-links a:hover {
-    background: #a3eab179;
+    background: #a3eae9bd;
     color: #ffffff;
 }
 
